Issue #649 fix: Remove unwanted z-index for close icon in sunbird common header

--- a/org.ekstep.sunbirdcommonheader-1.0/editor/header.css
+++ b/org.ekstep.sunbirdcommonheader-1.0/editor/header.css
@@ -129,7 +129,6 @@ body {
     position: relative;
     float: right;
     right: -0.3vw;
-    z-index: 10001;
     cursor: pointer;
     line-height: 2;
 
